src/runtime/tests/golden/errors/26_generic_constraint_not_satisfied/source.z42
namespace Demo;

interface IComparable<T> { int CompareTo(T other); }

class Box<T> where T: IComparable<T> {
    T item;
    Box(T x) { this.item = x; }
}

class Plain { int v; Plain(int x) { this.v = x; } }

void Main() {
    var b = new Box<Plain>(new Plain(1));
}
